RESOLVED FIXED219466
MediaSessionHelper::setSharedHelper() hangs when "media in the GPU process" is enabled
https://bugs.webkit.org/show_bug.cgi?id=219466
Summary MediaSessionHelper::setSharedHelper() hangs when "media in the GPU process" i...
Jer Noble
Reported 2020-12-02 17:06:04 PST
MediaSessionHelper::setSharedHelper() hangs when "media in the GPU process" is enabled
Attachments
Patch (2.83 KB, patch)
2020-12-02 17:12 PST, Jer Noble
cdumez: review+
cdumez: commit-queue-
Patch for landing (2.82 KB, patch)
2020-12-02 17:27 PST, Jer Noble
no flags
Patch (2.84 KB, patch)
2020-12-03 08:32 PST, Chris Dumez
no flags
Jer Noble
Comment 1 2020-12-02 17:11:50 PST
Jer Noble
Comment 2 2020-12-02 17:12:13 PST
Chris Dumez
Comment 3 2020-12-02 17:14:06 PST
Comment on attachment 415265 [details] Patch r=me
Chris Dumez
Comment 4 2020-12-02 17:15:05 PST
Comment on attachment 415265 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415265&action=review > Source/WebCore/platform/audio/ios/MediaSessionHelperIOS.mm:147 > + sharedHelperInstance() = std::make_unique<MediaSessionHelperiOS>(); makeUnique<> is the new way iirc.
Chris Dumez
Comment 5 2020-12-02 17:15:10 PST
Comment on attachment 415265 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415265&action=review > Source/WebCore/platform/audio/ios/MediaSessionHelperIOS.mm:147 > + sharedHelperInstance() = std::make_unique<MediaSessionHelperiOS>(); makeUnique<> is the new way iirc.
Jer Noble
Comment 6 2020-12-02 17:27:19 PST
Created attachment 415266 [details] Patch for landing
Chris Dumez
Comment 7 2020-12-03 08:32:35 PST
EWS
Comment 8 2020-12-03 09:16:08 PST
Committed r270394: <https://trac.webkit.org/changeset/270394> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415302 [details].
Note You need to log in before you can comment on or make changes to this bug.